# dht22-sensor

./: Cargo.toml  README.md
src/: dht22.rs  error.rs  lib.rs
