[package]
name = "dht22-sensor"
version = "0.1.0"
edition = "2024"
authors = ["ImplFerris"]
description = "A no_std driver for the DHT22 (AM2302) temperature and humidity sensor"
license = "MIT"
repository = "https://github.com/implferris/dht22-sensor"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["dht22", "sensor", "embedded-hal", "no-std", "temperature"]

[dependencies]
embedded-hal = "1.0.0"
defmt = { version = "1.0.1", optional = true }

[features]
defmt = ["dep:defmt"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", default-features = false, features = [
    # eh1: Provide module eh1 that mocks embedded-hal version 1.x (enabled by default)
    "eh1",
] }
